--- a/NodeJS/package.json
+++ b/NodeJS/package.json
@@ -15,7 +15,10 @@
   "author": "DAW Para MiniServidores",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "mongodb": "^3.4.0",
+    "mongoose": "^5.8.1",
     "node-sass": "^4.13.0"
   },
   "devDependencies": {
