--- a/NodeJS/package.json
+++ b/NodeJS/package.json
@@ -17,9 +17,10 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mongodb": "^3.4.0",
-    "mongoose": "^5.8.1",
-    "node-sass": "^4.13.0"
+    "mongodb": "^3.4.1",
+    "mongoose": "^5.8.7",
+    "node-sass": "^4.13.0",
+    "proj4": "^2.6.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
